[package]
name = "epc"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

[[bin]]
name = "epc"
path = "src/bin/epc.rs"

[lib]
path = "src/lib.rs"
name = "epc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "*"
crossterm = "*"
serde = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
tui = { version = "*", features = ["crossterm"] }

